--- a/src/app/Components/create-tarjeta-credito/create-tarjeta-credito.component.html
+++ b/src/app/Components/create-tarjeta-credito/create-tarjeta-credito.component.html
@@ -17,7 +17,7 @@
             <div class="form-group">
                 <div class="input-group">
                     <input type="text" class="form-control" formControlName="fechaExpiracion" maxlength="5"
-                        placeholder="Fecha Expiracion" />
+                        placeholder="DD/MM" />
                 </div>
             </div>
         </div>
