--- a/src/app/Components/list-tarjeta-credito/list-tarjeta-credito.component.html
+++ b/src/app/Components/list-tarjeta-credito/list-tarjeta-credito.component.html
@@ -1,1 +1,24 @@
-<p>list-tarjeta-credito works!</p>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Titular</th>
+            <th scope="col">NumeroTarjeta</th>
+            <th scope="col">FechaExpiracion</th>
+            <th scope="col">Cvv</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let tarjeta of tarjetaService.listado">
+            <td>{{tarjeta.titular}}</td>
+            <td>{{tarjeta.numeroTarjeta}}</td>
+            <td>{{tarjeta.fechaExpiracion}}</td>
+            <td>{{tarjeta.cvv}}</td>
+            <td>
+                <i class="far fa-edit fa-lg text-info" (click)="Editar(tarjeta)" style="cursor: pointer;"></i>|
+
+                <i class="far fa-trash-alt fa-lg text-danger" (click)="EliminarTarjeta(tarjeta.id)"
+                    style='cursor: pointer;'></i>
+            </td>
+        </tr>
+    </tbody>
+</table>
